# Garrinator

description/launch/: display.launch
description/macros/: base.xacro  instruction.txt  rim.xacro  roller.xacro  roller2.xacro
description/mesh/: wheelasm.stl
garri_teleop/: CMakeLists.txt  package.xml
garri_teleop/launch/: robot_joy.launch
garri_teleop/src/: robot_teleop_joy.cpp
hardware_interface/: CMakeLists.txt  package.xml
hardware_interface/config/: controllers.yaml
hardware_interface/include/: odrive_hw_if.h
hardware_interface/launch/: hw_if.launch
hardware_interface/src/: hw_if_node.cpp  odrive_hw_if.cpp
hardware_interface/src/test/: hw_if_test.cpp  main_test.cpp  python_test.py
omni4_controller/: controller_plugins.xml  package.xml
omni4_controller/config/: omni4_controller.yaml
omni4_controller/include/: omni4_controller.h
omni4_controller/launch/: omni4_controller.launch
omni4_controller/src/: omni4_controller.cpp
omni_4_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
omni_4_controller/src/: omni_4_controller.cpp
